--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "ยิงปลา - เว็บพนัน g2grich888(จีทูจีริช888) สมัครฟรี เครดิตฟรี ที่นี้",
+  "name": "TeTukl6671LhLrNUzvQQxAnA71eveFK9BVUUIOSBlAwSVSjSLe",
   "theme": "syntax",
   "version": "1.0.5",
-  "description": "ยิงปลา การเข้ารับบริการจากเว็บ อย่างไรก็ดี ยิงปลา G2GRich888 เว็บพนันออนไลน์ อันดับหนึ่ง Ruay97 หวยออนไลน์ของเรานั้น ท่านสามารถเล่นหวย แทงหวย ได้ผ่านการเข้",
+  "description": "พนันมวย Candy แม้น พนันมวย ที่ Play168 เว็บพนัน อันดับหนึ่ง Burst หรือเกมสล็อตลูกกวาด เป็นเกมสล็อตแนวใหม่ที่เล่นได้ง่าย ธีมเกมน่ารักสดใส อัตราการออกรางวัลโ",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "ยิงปลา",
-    "ยิงปลา G2GRich888"
-  ],
+  "keywords": ["พนันมวย","พนันมวย Play168"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
