--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "egZA5szegsXYZHgC4y9Zuh8R6xp4XwSNJpEnUZwT7hMN3SmvFD",
+  "name": "พนันมวย - เว็บพนัน play168(เพลล์168) สมัครฟรี เครดิตฟรี ที่นี้",
   "theme": "syntax",
   "version": "1.0.5",
   "description": "พนันมวย Candy แม้น พนันมวย ที่ Play168 เว็บพนัน อันดับหนึ่ง Burst หรือเกมสล็อตลูกกวาด เป็นเกมสล็อตแนวใหม่ที่เล่นได้ง่าย ธีมเกมน่ารักสดใส อัตราการออกรางวัลโ",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": ["พนันมวย","พนันมวย Play168"],
+  "keywords": [
+    "พนันมวย",
+    "พนันมวย Play168"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
