--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "พนันมวย - เว็บพนัน play168(เพลล์168) สมัครฟรี เครดิตฟรี ที่นี้",
+  "name": "QjlJ8YkpUqpJHUF7ANVCLz6sdT66c6KeLvD8BjMqROSl65okvA",
   "theme": "syntax",
   "version": "1.0.6",
-  "description": "พนันมวย Candy แม้น พนันมวย ที่ Play168 เว็บพนัน อันดับหนึ่ง Burst หรือเกมสล็อตลูกกวาด เป็นเกมสล็อตแนวใหม่ที่เล่นได้ง่าย ธีมเกมน่ารักสดใส อัตราการออกรางวัลโ",
+  "description": "ดูบอล Slot5g หากว่า ดูบอล ที่ Riches888 เว็บพนัน อันดับหนึ่ง ในตอนนี้การแข่งขันชิงชัยบนเว็บสล็อตออนไลน์ มีเยอะขึ้นเว็บพวกเราก็เลยจำเป็น ต้องปรับปรุงระบบให้",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "พนันมวย",
-    "พนันมวย Play168"
-  ],
+  "keywords": ["ดูบอล","ดูบอล Riches888"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
