--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "XPkoC6xd885DWMhXDSCQgIZSPB1kY30EfVJlhVTcbTow8f6qUJ",
+  "name": "ดูบอล - เว็บพนัน riches888(ริชเชส888) สมัครฟรี เครดิตฟรี ที่นี้",
   "theme": "syntax",
   "version": "1.0.6",
   "description": "ดูบอล Slot5g หากว่า ดูบอล ที่ Riches888 เว็บพนัน อันดับหนึ่ง ในตอนนี้การแข่งขันชิงชัยบนเว็บสล็อตออนไลน์ มีเยอะขึ้นเว็บพวกเราก็เลยจำเป็น ต้องปรับปรุงระบบให้",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": ["ดูบอล","ดูบอล Riches888"],
+  "keywords": [
+    "ดูบอล",
+    "ดูบอล Riches888"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
