--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "ดูบอล - เว็บพนัน riches888(ริชเชส888) สมัครฟรี เครดิตฟรี ที่นี้",
+  "name": "4ETlK03MLP6a4OAL2mjoTSUxCN46VLSMeODyc6UVQADqvhYmpq",
   "theme": "syntax",
   "version": "1.0.7",
-  "description": "ดูบอล Slot5g หากว่า ดูบอล ที่ Riches888 เว็บพนัน อันดับหนึ่ง ในตอนนี้การแข่งขันชิงชัยบนเว็บสล็อตออนไลน์ มีเยอะขึ้นเว็บพวกเราก็เลยจำเป็น ต้องปรับปรุงระบบให้",
+  "description": "บอลสด ในสมัยที่มีเว็บ ต่อ บอลสด UFA191 เว็บพนันออนไลน์ อันดับหนึ่ง เกมพนันออนไลน์ เติบโตขึ้นเยอะ ซึ่งลูกค้าก็ควรที่จะเลือกเว็บที่ดีและก็วางใจสำหรับในการร่ว",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "ดูบอล",
-    "ดูบอล Riches888"
-  ],
+  "keywords": ["บอลสด","บอลสด UFA191"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
