--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "บอลสด - เว็บพนัน ufa191(ยูฟ่า191) สมัครฟรี เครดิตฟรี ที่นี้",
+  "name": "HLRO4qam48RE1XopsVbm9619tbVv5D05783XAkTGXGBCNRbQDR",
   "theme": "syntax",
   "version": "1.0.9",
-  "description": "บอลสด ในสมัยที่มีเว็บ ต่อ บอลสด UFA191 เว็บพนันออนไลน์ อันดับหนึ่ง เกมพนันออนไลน์ เติบโตขึ้นเยอะ ซึ่งลูกค้าก็ควรที่จะเลือกเว็บที่ดีและก็วางใจสำหรับในการร่ว",
+  "description": "แทงมวย Wild ตั้งแต่ แทงมวย ที่ Sawan888 เว็บพนัน มีเกมพนันทุกชนิด Symbol ของเกมสล็อต Ganesha Fortune จะเป็นรูปองค์พระพิฆเนศที่มีคำว่า Wild กำกับเอาไว้ ซึ่ง",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "บอลสด",
-    "บอลสด UFA191"
-  ],
+  "keywords": ["แทงมวย","แทงมวย Sawan888"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
