--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "HLRO4qam48RE1XopsVbm9619tbVv5D05783XAkTGXGBCNRbQDR",
+  "name": "แทงมวย - เว็บพนัน sawan888(สวรรค์888) สมัครฟรี เครดิตฟรี ที่นี้",
   "theme": "syntax",
   "version": "1.0.9",
   "description": "แทงมวย Wild ตั้งแต่ แทงมวย ที่ Sawan888 เว็บพนัน มีเกมพนันทุกชนิด Symbol ของเกมสล็อต Ganesha Fortune จะเป็นรูปองค์พระพิฆเนศที่มีคำว่า Wild กำกับเอาไว้ ซึ่ง",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": ["แทงมวย","แทงมวย Sawan888"],
+  "keywords": [
+    "แทงมวย",
+    "แทงมวย Sawan888"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
