--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "แทงมวย - เว็บพนัน sawan888(สวรรค์888) สมัครฟรี เครดิตฟรี ที่นี้",
+  "name": "ZDA03VEb9fiYvRXWsaMgFDhpEA7ukmzRteXr96heXSuWiAZSQ5",
   "theme": "syntax",
   "version": "1.0.10",
-  "description": "แทงมวย Wild ตั้งแต่ แทงมวย ที่ Sawan888 เว็บพนัน มีเกมพนันทุกชนิด Symbol ของเกมสล็อต Ganesha Fortune จะเป็นรูปองค์พระพิฆเนศที่มีคำว่า Wild กำกับเอาไว้ ซึ่ง",
+  "description": "ยิงปลา Spinix จนถึง ยิงปลา ที่ HotGraph88 เว็บพนัน มีเกมพนันทุกชนิด Slot เว็บไซต์ เกมสล็อตออนไลน์ เว็บไซต์ ที่หากท่านกำลังสนใจ และ ต้องการจะสมัครสมาชิก ท่า",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "แทงมวย",
-    "แทงมวย Sawan888"
-  ],
+  "keywords": ["ยิงปลา","ยิงปลา HotGraph88"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
