--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "ยิงปลา ได้อย่างไร",
+  "name": "NLW1HsS0kuDkCLLYRZoGirTDfEWPIekFHrXidQYSGaRp8TfHYV",
   "theme": "syntax",
   "version": "1.0.11",
   "description": "ยิงปลา Spinix จนถึง ยิงปลา ที่ HotGraph88 เว็บพนัน มีเกมพนันทุกชนิด Slot เว็บไซต์ เกมสล็อตออนไลน์ เว็บไซต์ ที่หากท่านกำลังสนใจ และ ต้องการจะสมัครสมาชิก ท่า",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "ยิงปลา",
-    "ยิงปลา HotGraph88"
-  ],
+  "keywords": ["ยิงปลา","ยิงปลา HotGraph88"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
