--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "HRG2CtHe8QPPEAl4ONCIxvOhULUTt0eVnIbg1SYUzRDNrtWVXU",
   "theme": "syntax",
   "version": "1.0.11",
-  "description": "ยิงปลา Spinix จนถึง ยิงปลา ที่ HotGraph88 เว็บพนัน มีเกมพนันทุกชนิด Slot เว็บไซต์ เกมสล็อตออนไลน์ เว็บไซต์ ที่หากท่านกำลังสนใจ และ ต้องการจะสมัครสมาชิก ท่า",
+  "description": "เกมยิงปลา หากคุณกำลังสงสัยว่า เนื่องจาก เกมยิงปลา ที่ Slot888 เว็บพนัน อันดับหนึ่ง Pgslotauto.Game นั้นมีข้อดีอย่างไรบ้าง ทำไมจึงควรเลือกใช้งานกับเว็บไซต์เ",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": ["ยิงปลา","ยิงปลา HotGraph88"],
+  "keywords": ["เกมยิงปลา","เกมยิงปลา Slot888"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
