--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "เกมยิงปลา ที่ไหน",
+  "name": "d6rRce5urCyBdVYOrb8R4nbFll6YzRAeEFDZXdClDaMgt3kcD5",
   "theme": "syntax",
   "version": "1.0.13",
   "description": "เกมยิงปลา หากคุณกำลังสงสัยว่า เนื่องจาก เกมยิงปลา ที่ Slot888 เว็บพนัน อันดับหนึ่ง Pgslotauto.Game นั้นมีข้อดีอย่างไรบ้าง ทำไมจึงควรเลือกใช้งานกับเว็บไซต์เ",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "เกมยิงปลา",
-    "เกมยิงปลา Slot888"
-  ],
+  "keywords": ["เกมยิงปลา","เกมยิงปลา Slot888"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
