--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "GgZCqvhBcAEoAWB2HUyLYOnjcCO3b74QnZhEpKf2zeWt1NIQCv",
   "theme": "syntax",
   "version": "1.0.13",
-  "description": "เกมยิงปลา หากคุณกำลังสงสัยว่า เนื่องจาก เกมยิงปลา ที่ Slot888 เว็บพนัน อันดับหนึ่ง Pgslotauto.Game นั้นมีข้อดีอย่างไรบ้าง ทำไมจึงควรเลือกใช้งานกับเว็บไซต์เ",
+  "description": "ดูผลฮั่งเส็งย้อนหลัง 14-4131-1383-3887-7893-3994-49ทางเว็บไซต์หวยไทยไม่ขอยืนยันว่าชุดเลขเด็ดงวดนี้จากเลขลับเฉพาะกองสลากเป็นชุดที่มาจากกองสลากโดยตรง เพื่อ ด",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": ["เกมยิงปลา","เกมยิงปลา Slot888"],
+  "keywords": ["ดูผลฮั่งเส็งย้อนหลัง","ดูผลฮั่งเส็งย้อนหลัง Uwin789"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
