--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "ดูผลฮั่งเส็งย้อนหลัง ที่ไหน - เว็บใหม่ uwin789 2023 ล่าสุด",
+  "name": "enRWwPodaLB6gXcLso1LGlj2Bgu4orJytsQuk8kLt8h7WOHaku",
   "theme": "syntax",
   "version": "1.0.14",
   "description": "ดูผลฮั่งเส็งย้อนหลัง 14-4131-1383-3887-7893-3994-49ทางเว็บไซต์หวยไทยไม่ขอยืนยันว่าชุดเลขเด็ดงวดนี้จากเลขลับเฉพาะกองสลากเป็นชุดที่มาจากกองสลากโดยตรง เพื่อ ด",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "ดูผลฮั่งเส็งย้อนหลัง",
-    "ดูผลฮั่งเส็งย้อนหลัง Uwin789"
-  ],
+  "keywords": ["ดูผลฮั่งเส็งย้อนหลัง","ดูผลฮั่งเส็งย้อนหลัง Uwin789"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
