Renaming 6XUyv0qQPHhjZoKhXVp77rTvf02jLgvu2GOFRemEdb1401B9ml to ดูผลฮั่งเส็งย้อนหลัง ที่ไหน - เว็บใหม่ uwin789 2023 ล่าสุด-

--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "6XUyv0qQPHhjZoKhXVp77rTvf02jLgvu2GOFRemEdb1401B9ml",
+  "name": "ดูผลฮั่งเส็งย้อนหลัง ที่ไหน - เว็บใหม่ uwin789 2023 ล่าสุด-",
   "theme": "syntax",
   "version": "1.0.15",
   "description": "ดูผลฮั่งเส็งย้อนหลัง 14-4131-1383-3887-7893-3994-49ทางเว็บไซต์หวยไทยไม่ขอยืนยันว่าชุดเลขเด็ดงวดนี้จากเลขลับเฉพาะกองสลากเป็นชุดที่มาจากกองสลากโดยตรง เพื่อ ด",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": ["ดูผลฮั่งเส็งย้อนหลัง","ดูผลฮั่งเส็งย้อนหลัง Uwin789"],
+  "keywords": [
+    "ดูผลฮั่งเส็งย้อนหลัง",
+    "ดูผลฮั่งเส็งย้อนหลัง Uwin789"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
