--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "ดูผลฮั่งเส็งย้อนหลัง ที่ไหน - เว็บใหม่ uwin789 2023 ล่าสุด-",
+  "name": "QOsdE4ecsl5Hn47tjXaNCwZyhqiUxSnTmiWehTNIVz0qkdDixI",
   "theme": "syntax",
   "version": "1.0.16",
-  "description": "ดูผลฮั่งเส็งย้อนหลัง 14-4131-1383-3887-7893-3994-49ทางเว็บไซต์หวยไทยไม่ขอยืนยันว่าชุดเลขเด็ดงวดนี้จากเลขลับเฉพาะกองสลากเป็นชุดที่มาจากกองสลากโดยตรง เพื่อ ด",
+  "description": "maruay chok หวยออนไลน์ เว็บซื้อหวยออนไลน์ ด้วย maruay chok หวยออนไลน์ ที่ Ltobet เว็บหวยออนไลน์ อันดับหนึ่ง เว็บรีวิวหวยออนไลน์อันดับ 1 ของเมืองไทย มีเลขเด",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "ดูผลฮั่งเส็งย้อนหลัง",
-    "ดูผลฮั่งเส็งย้อนหลัง Uwin789"
-  ],
+  "keywords": ["MARUAY CHOK หวยออนไลน์","MARUAY","CHOK","หวยออนไลน์","MARUAY Ltobet","CHOK Ltobet","หวยออนไลน์ Ltobet"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
