--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "QOsdE4ecsl5Hn47tjXaNCwZyhqiUxSnTmiWehTNIVz0qkdDixI",
   "theme": "syntax",
   "version": "1.0.16",
-  "description": "maruay chok หวยออนไลน์ เว็บซื้อหวยออนไลน์ ด้วย maruay chok หวยออนไลน์ ที่ Ltobet เว็บหวยออนไลน์ อันดับหนึ่ง เว็บรีวิวหวยออนไลน์อันดับ 1 ของเมืองไทย มีเลขเด",
+  "description": "หวยออนไลน์มังกรฟ้า เลข จนถึง หวยออนไลน์มังกรฟ้า Huaysod หวยออนไลน์ อันดับหนึ่ง 2 ตัว 82 87 92 97ขอให้สนุกกับการซื้อหวยออนไลน์งวดนี้ค่ะฟัน 93 693วิ่งรูด 8 9",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": ["MARUAY CHOK หวยออนไลน์","MARUAY","CHOK","หวยออนไลน์","MARUAY Ltobet","CHOK Ltobet","หวยออนไลน์ Ltobet"],
+  "keywords": ["หวยออนไลน์มังกรฟ้า","หวยออนไลน์มังกรฟ้า Huaysod"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
