--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "QOsdE4ecsl5Hn47tjXaNCwZyhqiUxSnTmiWehTNIVz0qkdDixI",
   "theme": "syntax",
   "version": "1.0.16",
-  "description": "หวยออนไลน์มังกรฟ้า เลข จนถึง หวยออนไลน์มังกรฟ้า Huaysod หวยออนไลน์ อันดับหนึ่ง 2 ตัว 82 87 92 97ขอให้สนุกกับการซื้อหวยออนไลน์งวดนี้ค่ะฟัน 93 693วิ่งรูด 8 9",
+  "description": "หวยปิงปอง777 ประการแรกเลยก็ดูจากเว็บ บน หวยปิงปอง777 Huay24 หวย24 หวยออนไลน์ มีหวยทุกชนิด Lottovip หวยปิงปอง777 โดยตรง โดยการกดไปที่เมนูผลรางวัล จากนั้นคุณ",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": ["หวยออนไลน์มังกรฟ้า","หวยออนไลน์มังกรฟ้า Huaysod"],
+  "keywords": ["หวยปิงปอง777","หวยปิงปอง777 Huay24"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
