--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "nDSIZvjomqw58vFZuKOidjCV5CKSq3n3sP6paoULC3pWvr9bNj",
+  "name": "หวยปิงปอง777 เล่นยังไง - เว็บใหม่ huay24 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.17",
   "description": "หวยปิงปอง777 ประการแรกเลยก็ดูจากเว็บ บน หวยปิงปอง777 Huay24 หวย24 หวยออนไลน์ มีหวยทุกชนิด Lottovip หวยปิงปอง777 โดยตรง โดยการกดไปที่เมนูผลรางวัล จากนั้นคุณ",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": ["หวยปิงปอง777","หวยปิงปอง777 Huay24"],
+  "keywords": [
+    "หวยปิงปอง777",
+    "หวยปิงปอง777 Huay24"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
