--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "หวยปิงปอง777 เล่นยังไง - เว็บใหม่ huay24 2023 ล่าสุด",
+  "name": "d49VqqOSUGsw2eyMR561SKi4531TvJbSsggVf7oGSLgvoBqAQn",
   "theme": "syntax",
   "version": "1.0.18",
-  "description": "หวยปิงปอง777 ประการแรกเลยก็ดูจากเว็บ บน หวยปิงปอง777 Huay24 หวย24 หวยออนไลน์ มีหวยทุกชนิด Lottovip หวยปิงปอง777 โดยตรง โดยการกดไปที่เมนูผลรางวัล จากนั้นคุณ",
+  "description": "win789สมัคร ผลหวยลาว บน win789สมัคร ที่ Masurebet เว็บหวยออนไลน์ อันดับหนึ่ง 121164 ผลหวยพัฒนา win789สมัคร 121164 ผลหวยลาววันนี้ ย้อนหลังผลหวยลาว 121164 42",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "หวยปิงปอง777",
-    "หวยปิงปอง777 Huay24"
-  ],
+  "keywords": ["WIN789สมัคร","WIN789สมัคร Masurebet"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
