--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "win789สมัคร เล่นที่ไหน - เว็บใหม่ masurebet 2023 ล่าสุด-",
+  "name": "4UfOvTNpeKfiZ0zp4YWUWxN8IxIDr6ZSF5MCwPkacB37IfOjSs",
   "theme": "syntax",
   "version": "1.0.21",
-  "description": "win789สมัคร ผลหวยลาว บน win789สมัคร ที่ Masurebet เว็บหวยออนไลน์ อันดับหนึ่ง 121164 ผลหวยพัฒนา win789สมัคร 121164 ผลหวยลาววันนี้ ย้อนหลังผลหวยลาว 121164 42",
+  "description": "หวยลาวสตาร์ย้อนหลัง หวยลาว ตั้งแต่ หวยลาวสตาร์ย้อนหลัง Jetsadabet หวยออนไลน์ อันดับหนึ่ง ຫວຍລາວ หรือ หวยพัฒนา ( ຫວຍພັດທະນາ ) ที่กำลังเป็นที่นิยมอยู่ในขณะนี",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "WIN789สมัคร",
-    "WIN789สมัคร Masurebet"
-  ],
+  "keywords": ["หวยลาวสตาร์ย้อนหลัง","หวยลาวสตาร์ย้อนหลัง Jetsadabet"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
