--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "หวยลาวสตาร์ย้อนหลัง คืออะไร - เว็บใหม่ jetsadabet 2023 ล่าสุด-",
+  "name": "W1Etq7LiJJPyNM3wvDqBiBWRYjrX21x9ISRTdgIqD3XzyzO6WJ",
   "theme": "syntax",
   "version": "1.0.25",
-  "description": "หวยลาวสตาร์ย้อนหลัง หวยลาว ตั้งแต่ หวยลาวสตาร์ย้อนหลัง Jetsadabet หวยออนไลน์ อันดับหนึ่ง ຫວຍລາວ หรือ หวยพัฒนา ( ຫວຍພັດທະນາ ) ที่กำลังเป็นที่นิยมอยู่ในขณะนี",
+  "description": "gclub ฝาก-ถอน Jili เว้นแต่ gclub ฝาก-ถอน ที่ 460Bet เว็บพนัน อันดับหนึ่ง gclub ฝาก-ถอน Slot ทางเข้าเว็บหลัก Pgslotauto.Gg มีระบบการฝาก-ถอนเงินแบบออโต้ที่ทั",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "หวยลาวสตาร์ย้อนหลัง",
-    "หวยลาวสตาร์ย้อนหลัง Jetsadabet"
-  ],
+  "keywords": [null],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
