--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "eIUNXyAohcCpFO5GjWLlAbA9XCq9zXXuqQgMpi5ZuSrM98BcY1",
   "theme": "syntax",
   "version": "1.0.25",
-  "description": "gclub ฝาก-ถอน Jili เว้นแต่ gclub ฝาก-ถอน ที่ 460Bet เว็บพนัน อันดับหนึ่ง gclub ฝาก-ถอน Slot ทางเข้าเว็บหลัก Pgslotauto.Gg มีระบบการฝาก-ถอนเงินแบบออโต้ที่ทั",
+  "description": "จับยี่กี ผล แจกเลขเด็ดจากหนังสือพิมพ์ จับยี่กี ผล หาก จับยี่กี ผล ที่ Huaydee เว็บหวยออนไลน์ อันดับหนึ่ง งวด 161059  หวยไทยรัฐ เดลินิวส์ บางกอกทูเดย์ หวยบ้",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [null],
+  "keywords": ["จับยี่กี ผล","จับยี่กี","ผล","จับยี่กี Huaydee","ผล Huaydee"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
