--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "จับยี่กี ผล เล่นที่ไหน - เว็บใหม่ huaydee 2023 ล่าสุด",
+  "name": "YeTFyRuOt7eoZnDcorQhkbkKqqpU3joawdn0iI0J0cPP8I23o3",
   "theme": "syntax",
   "version": "1.0.26",
-  "description": "จับยี่กี ผล แจกเลขเด็ดจากหนังสือพิมพ์ จับยี่กี ผล หาก จับยี่กี ผล ที่ Huaydee เว็บหวยออนไลน์ อันดับหนึ่ง งวด 161059  หวยไทยรัฐ เดลินิวส์ บางกอกทูเดย์ หวยบ้",
+  "description": "Chudjen999 login ชุดเลข ของ Chudjen999 login Huaysod หวยสด หวยออนไลน์ มีหวยทุกชนิด Chudjen999 login 3 ตัว พร้อมจับหมุนกลับได้แก่414-144-441415-451-154-145-",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "จับยี่กี ผล",
-    "จับยี่กี",
-    "ผล",
-    "จับยี่กี Huaydee",
-    "ผล Huaydee"
-  ],
+  "keywords": ["CHUDJEN999 LOGIN","CHUDJEN999","LOGIN","CHUDJEN999 Huaysod","LOGIN Huaysod"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
