--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "YeTFyRuOt7eoZnDcorQhkbkKqqpU3joawdn0iI0J0cPP8I23o3",
+  "name": "chudjen999 login เล่นยังไง - เว็บใหม่ huaysod 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.26",
   "description": "Chudjen999 login ชุดเลข ของ Chudjen999 login Huaysod หวยสด หวยออนไลน์ มีหวยทุกชนิด Chudjen999 login 3 ตัว พร้อมจับหมุนกลับได้แก่414-144-441415-451-154-145-",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": ["CHUDJEN999 LOGIN","CHUDJEN999","LOGIN","CHUDJEN999 Huaysod","LOGIN Huaysod"],
+  "keywords": [
+    "CHUDJEN999 LOGIN",
+    "CHUDJEN999",
+    "LOGIN",
+    "CHUDJEN999 Huaysod",
+    "LOGIN Huaysod"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
