--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "chudjen999 login เล่นยังไง - เว็บใหม่ huaysod 2023 ล่าสุด",
+  "name": "vH1TVeijDchAMmZlWAnTNR5Jwk4TFjEFFJl1xOCine90WEoqNH",
   "theme": "syntax",
   "version": "1.0.27",
-  "description": "Chudjen999 login ชุดเลข ของ Chudjen999 login Huaysod หวยสด หวยออนไลน์ มีหวยทุกชนิด Chudjen999 login 3 ตัว พร้อมจับหมุนกลับได้แก่414-144-441415-451-154-145-",
+  "description": "thailotto ดีไหม ชุดเลขท้าย จนถึง thailotto ดีไหม Settee Bet เศรษฐีเบท หวยออนไลน์ มีหวยทุกชนิด 3 ตัว ได้แก่458-485-854-845-548-584ชุดเลขท้าย 2 ตัว ได้แก่59-",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "CHUDJEN999 LOGIN",
-    "CHUDJEN999",
-    "LOGIN",
-    "CHUDJEN999 Huaysod",
-    "LOGIN Huaysod"
-  ],
+  "keywords": ["THAILOTTO ดีไหม","THAILOTTO","ดีไหม","THAILOTTO Settee Bet","ดีไหม Settee Bet"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
