--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "TQcyiBuqx0PZMdEwmkfy0oWlPipQXVl0bY58Dar8wZj7PCSdOl",
+  "name": "thailotto ดีไหม เล่นที่ไหน - เว็บใหม่ settee bet 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.28",
   "description": "thailotto ดีไหม ชุดเลขท้าย จนถึง thailotto ดีไหม Settee Bet เศรษฐีเบท หวยออนไลน์ มีหวยทุกชนิด 3 ตัว ได้แก่458-485-854-845-548-584ชุดเลขท้าย 2 ตัว ได้แก่59-",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": ["THAILOTTO ดีไหม","THAILOTTO","ดีไหม","THAILOTTO Settee Bet","ดีไหม Settee Bet"],
+  "keywords": [
+    "THAILOTTO ดีไหม",
+    "THAILOTTO",
+    "ดีไหม",
+    "THAILOTTO Settee Bet",
+    "ดีไหม Settee Bet"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
