--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "thailotto ดีไหม เล่นที่ไหน - เว็บใหม่ settee bet 2023 ล่าสุด",
+  "name": "29FW644alFAui2NeeAALQL3AMCoLCJfMh8xJsjx0iguKiXqSmE",
   "theme": "syntax",
   "version": "1.0.29",
-  "description": "thailotto ดีไหม ชุดเลขท้าย จนถึง thailotto ดีไหม Settee Bet เศรษฐีเบท หวยออนไลน์ มีหวยทุกชนิด 3 ตัว ได้แก่458-485-854-845-548-584ชุดเลขท้าย 2 ตัว ได้แก่59-",
+  "description": "Romance of the Three Kingdoms เชื่อถือได้ อย่างไรก็ดี Romance of the Three Kingdoms ที่ ThaiSbobet เว็บพนัน อันดับหนึ่ง และก็คุณจะสนุกสนาน กับมันอย่างมากคา",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "THAILOTTO ดีไหม",
-    "THAILOTTO",
-    "ดีไหม",
-    "THAILOTTO Settee Bet",
-    "ดีไหม Settee Bet"
-  ],
+  "keywords": [null],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
