--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "romance of the three kingdoms ได้อย่างไร - เว็บใหม่ thaisbobet 2023 ล่าสุด",
+  "name": "7GSfGEXaSG0bboxBDzDMEULTnDV1rr4o7qQQ8VOmd0PWs5uI2u",
   "theme": "syntax",
   "version": "1.0.30",
-  "description": "Romance of the Three Kingdoms เชื่อถือได้ อย่างไรก็ดี Romance of the Three Kingdoms ที่ ThaiSbobet เว็บพนัน อันดับหนึ่ง และก็คุณจะสนุกสนาน กับมันอย่างมากคา",
+  "description": "เว็บสล็อต สูตรในการ ทว่า เว็บสล็อต Winclub88 เว็บพนันออนไลน์ อันดับหนึ่ง ปั่นสล็อต ของเรานั้น ต้องแยกแยะว่า มีเกมส์หลากหลายค่าย แต่เราอยากจะแนะนำว่า เกมส์ส",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    null
-  ],
+  "keywords": ["เว็บสล็อต","เว็บสล็อต Winclub88"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
