--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "เว็บสล็อต ที่ไหน - เว็บใหม่ winclub88 2023 ล่าสุด",
+  "name": "Pl2pS0XpijIvUEf7iw3STJZKfvT2pSab6hF9JOn8LvMqaEs59U",
   "theme": "syntax",
   "version": "1.0.31",
   "description": "เว็บสล็อต สูตรในการ ทว่า เว็บสล็อต Winclub88 เว็บพนันออนไลน์ อันดับหนึ่ง ปั่นสล็อต ของเรานั้น ต้องแยกแยะว่า มีเกมส์หลากหลายค่าย แต่เราอยากจะแนะนำว่า เกมส์ส",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "เว็บสล็อต",
-    "เว็บสล็อต Winclub88"
-  ],
+  "keywords": ["เว็บสล็อต","เว็บสล็อต Winclub88"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
