--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "เว็บสล็อต ที่ไหน - เว็บใหม่ winclub88 2023 ล่าสุด",
+  "name": "MLopxOqTEkNH1qsWuTkBeIzY5bnYWz2LU3RoQJv1qzs31inz4C",
   "theme": "syntax",
   "version": "1.0.33",
-  "description": "เว็บสล็อต สูตรในการ ทว่า เว็บสล็อต Winclub88 เว็บพนันออนไลน์ อันดับหนึ่ง ปั่นสล็อต ของเรานั้น ต้องแยกแยะว่า มีเกมส์หลากหลายค่าย แต่เราอยากจะแนะนำว่า เกมส์ส",
+  "description": "queen and adam lambert tour 2022 tickets เสนอแนะ หรือ queen and adam lambert tour 2022 tickets ที่ Slot1234 เว็บพนัน มีเกมพนันทุกชนิด เว็บสล็อตแตกดี2022 เร",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "เว็บสล็อต",
-    "เว็บสล็อต Winclub88"
-  ],
+  "keywords": ["QUEEN AND ADAM LAMBERT TOUR 2022 TICKETS","QUEEN","AND","ADAM","LAMBERT","TOUR","2022","TICKETS","QUEEN Slot1234","AND Slot1234","ADAM Slot1234","LAMBERT Slot1234","TOUR Slot1234","2022 Slot1234","TICKETS Slot1234"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
