--- a/package.json
+++ b/package.json
@@ -1,10 +1,26 @@
 {
-  "name": "xCa0cM7hOsmg0u4ifkPvGqXK6PUB5PEQj0Wo0BW1YqQ6Vjc5lC",
+  "name": "queen and adam lambert tour 2022 tickets ดูที่ไหน - เว็บใหม่ slot1234 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.34",
   "description": "queen and adam lambert tour 2022 tickets เสนอแนะ หรือ queen and adam lambert tour 2022 tickets ที่ Slot1234 เว็บพนัน มีเกมพนันทุกชนิด เว็บสล็อตแตกดี2022 เร",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": ["QUEEN AND ADAM LAMBERT TOUR 2022 TICKETS","QUEEN","AND","ADAM","LAMBERT","TOUR","2022","TICKETS","QUEEN Slot1234","AND Slot1234","ADAM Slot1234","LAMBERT Slot1234","TOUR Slot1234","2022 Slot1234","TICKETS Slot1234"],
+  "keywords": [
+    "QUEEN AND ADAM LAMBERT TOUR 2022 TICKETS",
+    "QUEEN",
+    "AND",
+    "ADAM",
+    "LAMBERT",
+    "TOUR",
+    "2022",
+    "TICKETS",
+    "QUEEN Slot1234",
+    "AND Slot1234",
+    "ADAM Slot1234",
+    "LAMBERT Slot1234",
+    "TOUR Slot1234",
+    "2022 Slot1234",
+    "TICKETS Slot1234"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
