--- a/package.json
+++ b/package.json
@@ -1,26 +1,10 @@
 {
-  "name": "queen and adam lambert tour 2022 tickets ดูที่ไหน - เว็บใหม่ slot1234 2023 ล่าสุด",
+  "name": "2XYBrp0g7Lz2OQT5Gkz73JqBq36HmQKwaV1docZHMJ6sSNS3lI",
   "theme": "syntax",
   "version": "1.0.37",
-  "description": "queen and adam lambert tour 2022 tickets เสนอแนะ หรือ queen and adam lambert tour 2022 tickets ที่ Slot1234 เว็บพนัน มีเกมพนันทุกชนิด เว็บสล็อตแตกดี2022 เร",
+  "description": "ถอนเงินจากเว็บ ruayไม่ได้ ผลการออกรางวัล ของ ถอนเงินจากเว็บ ruayไม่ได้ ที่ Jetsadabet เว็บหวยออนไลน์ อันดับหนึ่ง หวยฮานอย ถอนเงินจากเว็บ ruayไม่ได้ ( Xổ Số",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "QUEEN AND ADAM LAMBERT TOUR 2022 TICKETS",
-    "QUEEN",
-    "AND",
-    "ADAM",
-    "LAMBERT",
-    "TOUR",
-    "2022",
-    "TICKETS",
-    "QUEEN Slot1234",
-    "AND Slot1234",
-    "ADAM Slot1234",
-    "LAMBERT Slot1234",
-    "TOUR Slot1234",
-    "2022 Slot1234",
-    "TICKETS Slot1234"
-  ],
+  "keywords": ["ถอนเงินจากเว็บ RUAYไม่ได้","ถอนเงินจากเว็บ","RUAYไม่ได้","ถอนเงินจากเว็บ Jetsadabet","RUAYไม่ได้ Jetsadabet"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
