--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "ถอนเงินจากเว็บ ruayไม่ได้ มีคำตอบ - เว็บใหม่ jetsadabet 2023 ล่าสุด",
+  "name": "qI3ND1H3l9ZSavPPWbBpiKZtriveEA042RlAFQp3PN0V5qFmQR",
   "theme": "syntax",
   "version": "1.0.38",
   "description": "ถอนเงินจากเว็บ ruayไม่ได้ ผลการออกรางวัล ของ ถอนเงินจากเว็บ ruayไม่ได้ ที่ Jetsadabet เว็บหวยออนไลน์ อันดับหนึ่ง หวยฮานอย ถอนเงินจากเว็บ ruayไม่ได้ ( Xổ Số",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "ถอนเงินจากเว็บ RUAYไม่ได้",
-    "ถอนเงินจากเว็บ",
-    "RUAYไม่ได้",
-    "ถอนเงินจากเว็บ Jetsadabet",
-    "RUAYไม่ได้ Jetsadabet"
-  ],
+  "keywords": ["ถอนเงินจากเว็บ RUAYไม่ได้","ถอนเงินจากเว็บ","RUAYไม่ได้","ถอนเงินจากเว็บ Jetsadabet","RUAYไม่ได้ Jetsadabet"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
