--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "ถอนเงินจากเว็บ ruayไม่ได้ มีคำตอบ - เว็บใหม่ jetsadabet 2023 ล่าสุด",
+  "name": "gP9c0ZXNGD5dJaDf8slhzkiTr5Tjxy9GFl0GXTEIe5EJhOBvRQ",
   "theme": "syntax",
   "version": "1.0.39",
-  "description": "ถอนเงินจากเว็บ ruayไม่ได้ ผลการออกรางวัล ของ ถอนเงินจากเว็บ ruayไม่ได้ ที่ Jetsadabet เว็บหวยออนไลน์ อันดับหนึ่ง หวยฮานอย ถอนเงินจากเว็บ ruayไม่ได้ ( Xổ Số",
+  "description": "ตรวจรางวัลจากตัวเลข กีฬาเสมือนจริง ตรวจรางวัลจากตัวเลข อนึ่ง ตรวจรางวัลจากตัวเลข Ltobet หวยออนไลน์ อันดับหนึ่ง คือ เกมอิเล็กทรอนิกส์รูปแบบใหม่ที่สร้างมาจาก",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "ถอนเงินจากเว็บ RUAYไม่ได้",
-    "ถอนเงินจากเว็บ",
-    "RUAYไม่ได้",
-    "ถอนเงินจากเว็บ Jetsadabet",
-    "RUAYไม่ได้ Jetsadabet"
-  ],
+  "keywords": ["ตรวจรางวัลจากตัวเลข","ตรวจรางวัลจากตัวเลข Ltobet"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
