Renaming gP9c0ZXNGD5dJaDf8slhzkiTr5Tjxy9GFl0GXTEIe5EJhOBvRQ to หวยดี pantip เล่นยังไง - เว็บใหม่ settee bet 2023 ล่าสุด

--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "gP9c0ZXNGD5dJaDf8slhzkiTr5Tjxy9GFl0GXTEIe5EJhOBvRQ",
+  "name": "หวยดี pantip เล่นยังไง - เว็บใหม่ settee bet 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.40",
   "description": "หวยดี pantip ผลรางวัลหวยมาเย์งวดนี้ออกอะไร หวยดี pantip ว่า หวยดี pantip ที่ Settee Bet เว็บหวยออนไลน์ อันดับหนึ่ง ผลหวยมาเลย์ 11965 ตรวจหวยมาเลย์4d ประจำง",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": ["หวยดี PANTIP","หวยดี","PANTIP","หวยดี Settee Bet","PANTIP Settee Bet"],
+  "keywords": [
+    "หวยดี PANTIP",
+    "หวยดี",
+    "PANTIP",
+    "หวยดี Settee Bet",
+    "PANTIP Settee Bet"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
