--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "หวยดี pantip เล่นยังไง - เว็บใหม่ settee bet 2023 ล่าสุด",
+  "name": "9eVdOAYGN2LZCJHW4vXvtwRukM7yLZKW4Ym15yA1suGMoOZIuQ",
   "theme": "syntax",
   "version": "1.0.41",
-  "description": "หวยดี pantip ผลรางวัลหวยมาเย์งวดนี้ออกอะไร หวยดี pantip ว่า หวยดี pantip ที่ Settee Bet เว็บหวยออนไลน์ อันดับหนึ่ง ผลหวยมาเลย์ 11965 ตรวจหวยมาเลย์4d ประจำง",
+  "description": "ตรวจรางวัลจากตัวเลข กีฬาเสมือนจริง ตรวจรางวัลจากตัวเลข อนึ่ง ตรวจรางวัลจากตัวเลข Ltobet หวยออนไลน์ อันดับหนึ่ง คือ เกมอิเล็กทรอนิกส์รูปแบบใหม่ที่สร้างมาจาก",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "หวยดี PANTIP",
-    "หวยดี",
-    "PANTIP",
-    "หวยดี Settee Bet",
-    "PANTIP Settee Bet"
-  ],
+  "keywords": ["ตรวจรางวัลจากตัวเลข","ตรวจรางวัลจากตัวเลข Ltobet"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
