--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "ตรวจรางวัลจากตัวเลข คืออะไร - เว็บใหม่ ltobet 2023 ล่าสุด",
+  "name": "4SA4dLJulmZWAn6zBKLNns8tqDD790cqMJPmpogrARzaMiczxx",
   "theme": "syntax",
   "version": "1.0.42",
-  "description": "ตรวจรางวัลจากตัวเลข กีฬาเสมือนจริง ตรวจรางวัลจากตัวเลข อนึ่ง ตรวจรางวัลจากตัวเลข Ltobet หวยออนไลน์ อันดับหนึ่ง คือ เกมอิเล็กทรอนิกส์รูปแบบใหม่ที่สร้างมาจาก",
+  "description": "set วันนี้ ชุดเลขท้าย หาก set วันนี้ Mawinbet มาวินเบท หวยออนไลน์ มีหวยทุกชนิด 2 set วันนี้ ตัว มีดังนี้57-7558-8567-7668-8697-7998-8907-7008-80คอหวยสามารถ",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "ตรวจรางวัลจากตัวเลข",
-    "ตรวจรางวัลจากตัวเลข Ltobet"
-  ],
+  "keywords": ["SET วันนี้","SET","วันนี้","SET Mawinbet","วันนี้ Mawinbet"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
