Renaming iqWGqzVdatlg370hpH72mxfbCVBCredZUXylqThnx01cvsqbaE to set วันนี้ ที่ไหน - เว็บใหม่ mawinbet 2023 ล่าสุด

--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "iqWGqzVdatlg370hpH72mxfbCVBCredZUXylqThnx01cvsqbaE",
+  "name": "set วันนี้ ที่ไหน - เว็บใหม่ mawinbet 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.42",
   "description": "set วันนี้ ชุดเลขท้าย หาก set วันนี้ Mawinbet มาวินเบท หวยออนไลน์ มีหวยทุกชนิด 2 set วันนี้ ตัว มีดังนี้57-7558-8567-7668-8697-7998-8907-7008-80คอหวยสามารถ",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": ["SET วันนี้","SET","วันนี้","SET Mawinbet","วันนี้ Mawinbet"],
+  "keywords": [
+    "SET วันนี้",
+    "SET",
+    "วันนี้",
+    "SET Mawinbet",
+    "วันนี้ Mawinbet"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
