--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "set วันนี้ ที่ไหน - เว็บใหม่ mawinbet 2023 ล่าสุด",
+  "name": "RVpgfv9mDI48L3bWpIWxBJo4gsfXaB50Vz9CX0VJJWTCi4LEXU",
   "theme": "syntax",
   "version": "1.0.43",
-  "description": "set วันนี้ ชุดเลขท้าย หาก set วันนี้ Mawinbet มาวินเบท หวยออนไลน์ มีหวยทุกชนิด 2 set วันนี้ ตัว มีดังนี้57-7558-8567-7668-8697-7998-8907-7008-80คอหวยสามารถ",
+  "description": "Pocket Games Slot Ufayabo จาก Pocket Games Slot ThaiSbobet เว็บพนันออนไลน์ อันดับหนึ่ง 88 ถึงแม้ว่าทางเว็บจะเป็น เว็บไซต์พนันฟุตบอลออนไลน์ แต่ทางเว็บไซต์ก็",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "SET วันนี้",
-    "SET",
-    "วันนี้",
-    "SET Mawinbet",
-    "วันนี้ Mawinbet"
-  ],
+  "keywords": [null],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
