--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "pocket games slot ดูยังไง - เว็บใหม่ thaisbobet 2023 ล่าสุด",
+  "name": "mvZvzxLuu2kk5D3qoHWDua2iBDiKkrYAwmQSnoZxJ7Otff9Fnq",
   "theme": "syntax",
   "version": "1.0.44",
   "description": "Pocket Games Slot Ufayabo จาก Pocket Games Slot ThaiSbobet เว็บพนันออนไลน์ อันดับหนึ่ง 88 ถึงแม้ว่าทางเว็บจะเป็น เว็บไซต์พนันฟุตบอลออนไลน์ แต่ทางเว็บไซต์ก็",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    null
-  ],
+  "keywords": [null],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
