--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "pocket games slot ดูยังไง - เว็บใหม่ thaisbobet 2023 ล่าสุด",
+  "name": "nJP6Alr4KkV27WM30RlOyn8NVaaUfd42RPPEpeyTIo1txdl3K0",
   "theme": "syntax",
   "version": "1.0.45",
-  "description": "Pocket Games Slot Ufayabo จาก Pocket Games Slot ThaiSbobet เว็บพนันออนไลน์ อันดับหนึ่ง 88 ถึงแม้ว่าทางเว็บจะเป็น เว็บไซต์พนันฟุตบอลออนไลน์ แต่ทางเว็บไซต์ก็",
+  "description": "12bet mobile เชื่อเถอะว่า กับ 12bet mobile Dafabet เว็บพนันออนไลน์ อันดับหนึ่ง 12bet mobile สล็อตหน้าหมีVip เกม สล็อตทั้งหมด นั้นเป็นเกมที่แตกได้ง่ายๆและได",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    null
-  ],
+  "keywords": ["12BET MOBILE","12BET","MOBILE","12BET Dafabet","MOBILE Dafabet"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
