--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "12bet mobile ที่ไหน - เว็บใหม่ dafabet 2023 ล่าสุด",
+  "name": "arxRcgwC1vktKZrrEZtqcQ0XkaZ2ODxlB840cZAiehpcrLDdmK",
   "theme": "syntax",
   "version": "1.0.46",
-  "description": "12bet mobile เชื่อเถอะว่า กับ 12bet mobile Dafabet เว็บพนันออนไลน์ อันดับหนึ่ง 12bet mobile สล็อตหน้าหมีVip เกม สล็อตทั้งหมด นั้นเป็นเกมที่แตกได้ง่ายๆและได",
+  "description": "cutlass class patrol boat สเตอร์ลิง cutlass class patrol boat ตั้งแต่ cutlass class patrol boat UFAC4 เว็บพนันออนไลน์ อันดับหนึ่ง กรีลิช ราฮีม สเตอร์ลิง…",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "12BET MOBILE",
-    "12BET",
-    "MOBILE",
-    "12BET Dafabet",
-    "MOBILE Dafabet"
-  ],
+  "keywords": ["CUTLASS CLASS PATROL BOAT","CUTLASS","CLASS","PATROL","BOAT","CUTLASS UFAC4","CLASS UFAC4","PATROL UFAC4","BOAT UFAC4"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
