--- a/package.json
+++ b/package.json
@@ -1,20 +1,10 @@
 {
-  "name": "cutlass class patrol boat เล่นที่ไหน - เว็บใหม่ ufac4 2023 ล่าสุด",
+  "name": "KiFA6Ma0tMzhgR0QSfKd1NtSF5P1hYQm34Hy3BqeFAAKtwM97n",
   "theme": "syntax",
   "version": "1.0.47",
   "description": "cutlass class patrol boat สเตอร์ลิง cutlass class patrol boat ตั้งแต่ cutlass class patrol boat UFAC4 เว็บพนันออนไลน์ อันดับหนึ่ง กรีลิช ราฮีม สเตอร์ลิง…",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "CUTLASS CLASS PATROL BOAT",
-    "CUTLASS",
-    "CLASS",
-    "PATROL",
-    "BOAT",
-    "CUTLASS UFAC4",
-    "CLASS UFAC4",
-    "PATROL UFAC4",
-    "BOAT UFAC4"
-  ],
+  "keywords": ["CUTLASS CLASS PATROL BOAT","CUTLASS","CLASS","PATROL","BOAT","CUTLASS UFAC4","CLASS UFAC4","PATROL UFAC4","BOAT UFAC4"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
