--- a/package.json
+++ b/package.json
@@ -1,20 +1,10 @@
 {
-  "name": "cutlass class patrol boat เล่นที่ไหน - เว็บใหม่ ufac4 2023 ล่าสุด",
+  "name": "cw6tLqGnMLVOp7uoU0s6abKqR4leoS3MxZJImzhuJhdwTTgij5",
   "theme": "syntax",
   "version": "1.0.48",
-  "description": "cutlass class patrol boat สเตอร์ลิง cutlass class patrol boat ตั้งแต่ cutlass class patrol boat UFAC4 เว็บพนันออนไลน์ อันดับหนึ่ง กรีลิช ราฮีม สเตอร์ลิง…",
+  "description": "ถ่ายทอดสดหวยวันนี้ ล่าสุด 2564 วันนี้ แนวทางเลขท้าย แต่ ถ่ายทอดสดหวยวันนี้ ล่าสุด 2564 วันนี้ Huaylike หวยออนไลน์ อันดับหนึ่ง 2 ตัว ได้แก่67-62-64-6347-42-",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "CUTLASS CLASS PATROL BOAT",
-    "CUTLASS",
-    "CLASS",
-    "PATROL",
-    "BOAT",
-    "CUTLASS UFAC4",
-    "CLASS UFAC4",
-    "PATROL UFAC4",
-    "BOAT UFAC4"
-  ],
+  "keywords": ["ถ่ายทอดสดหวยวันนี้ ล่าสุด 2564 วันนี้","ถ่ายทอดสดหวยวันนี้","ล่าสุด","2564","วันนี้","ถ่ายทอดสดหวยวันนี้ Huaylike","ล่าสุด Huaylike","2564 Huaylike","วันนี้ Huaylike"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
