Renaming cw6tLqGnMLVOp7uoU0s6abKqR4leoS3MxZJImzhuJhdwTTgij5 to ถ่ายทอดสดหวยวันนี้ ล่าสุด 2564 วันนี้ สรุปว่าอะไร - เว็บใหม่ huaylike 2023 ล่าสุด

--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
-  "name": "cw6tLqGnMLVOp7uoU0s6abKqR4leoS3MxZJImzhuJhdwTTgij5",
+  "name": "ถ่ายทอดสดหวยวันนี้ ล่าสุด 2564 วันนี้ สรุปว่าอะไร - เว็บใหม่ huaylike 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.48",
   "description": "ถ่ายทอดสดหวยวันนี้ ล่าสุด 2564 วันนี้ แนวทางเลขท้าย แต่ ถ่ายทอดสดหวยวันนี้ ล่าสุด 2564 วันนี้ Huaylike หวยออนไลน์ อันดับหนึ่ง 2 ตัว ได้แก่67-62-64-6347-42-",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": ["ถ่ายทอดสดหวยวันนี้ ล่าสุด 2564 วันนี้","ถ่ายทอดสดหวยวันนี้","ล่าสุด","2564","วันนี้","ถ่ายทอดสดหวยวันนี้ Huaylike","ล่าสุด Huaylike","2564 Huaylike","วันนี้ Huaylike"],
+  "keywords": [
+    "ถ่ายทอดสดหวยวันนี้ ล่าสุด 2564 วันนี้",
+    "ถ่ายทอดสดหวยวันนี้",
+    "ล่าสุด",
+    "2564",
+    "วันนี้",
+    "ถ่ายทอดสดหวยวันนี้ Huaylike",
+    "ล่าสุด Huaylike",
+    "2564 Huaylike",
+    "วันนี้ Huaylike"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
