--- a/package.json
+++ b/package.json
@@ -1,20 +1,10 @@
 {
-  "name": "ถ่ายทอดสดหวยวันนี้ ล่าสุด 2564 วันนี้ สรุปว่าอะไร - เว็บใหม่ huaylike 2023 ล่าสุด",
+  "name": "ZEdoy54itBK1SELPKEWOAz1PV4zn2jmv5qITf0d10FUw2FgLnE",
   "theme": "syntax",
   "version": "1.0.49",
-  "description": "ถ่ายทอดสดหวยวันนี้ ล่าสุด 2564 วันนี้ แนวทางเลขท้าย แต่ ถ่ายทอดสดหวยวันนี้ ล่าสุด 2564 วันนี้ Huaylike หวยออนไลน์ อันดับหนึ่ง 2 ตัว ได้แก่67-62-64-6347-42-",
+  "description": "ตรวจหวย16พฤษภาคม2565 เลข บน ตรวจหวย16พฤษภาคม2565 ที่ Lotto เว็บหวยออนไลน์ อันดับหนึ่ง 2 ตัว           71 78 73 25 26 21ระวัง 08ได้แนวทางเลขเด็ดจากเจ๊นุ๊กกั",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "ถ่ายทอดสดหวยวันนี้ ล่าสุด 2564 วันนี้",
-    "ถ่ายทอดสดหวยวันนี้",
-    "ล่าสุด",
-    "2564",
-    "วันนี้",
-    "ถ่ายทอดสดหวยวันนี้ Huaylike",
-    "ล่าสุด Huaylike",
-    "2564 Huaylike",
-    "วันนี้ Huaylike"
-  ],
+  "keywords": ["ตรวจหวย16พฤษภาคม2565","ตรวจหวย16พฤษภาคม2565 Lotto"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
