Renaming ZEdoy54itBK1SELPKEWOAz1PV4zn2jmv5qITf0d10FUw2FgLnE to ตรวจหวย16พฤษภาคม2565 เล่นที่ไหน - เว็บใหม่ lotto 2023 ล่าสุด

--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "ZEdoy54itBK1SELPKEWOAz1PV4zn2jmv5qITf0d10FUw2FgLnE",
+  "name": "ตรวจหวย16พฤษภาคม2565 เล่นที่ไหน - เว็บใหม่ lotto 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.49",
   "description": "ตรวจหวย16พฤษภาคม2565 เลข บน ตรวจหวย16พฤษภาคม2565 ที่ Lotto เว็บหวยออนไลน์ อันดับหนึ่ง 2 ตัว           71 78 73 25 26 21ระวัง 08ได้แนวทางเลขเด็ดจากเจ๊นุ๊กกั",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": ["ตรวจหวย16พฤษภาคม2565","ตรวจหวย16พฤษภาคม2565 Lotto"],
+  "keywords": [
+    "ตรวจหวย16พฤษภาคม2565",
+    "ตรวจหวย16พฤษภาคม2565 Lotto"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
