--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "ตรวจหวย16พฤษภาคม2565 เล่นที่ไหน - เว็บใหม่ lotto 2023 ล่าสุด",
+  "name": "yl1IQQhGHKf7Jq8uPsIYpB8VxweH7IvdVO42c9utyoeuRuiyyp",
   "theme": "syntax",
   "version": "1.0.50",
-  "description": "ตรวจหวย16พฤษภาคม2565 เลข บน ตรวจหวย16พฤษภาคม2565 ที่ Lotto เว็บหวยออนไลน์ อันดับหนึ่ง 2 ตัว           71 78 73 25 26 21ระวัง 08ได้แนวทางเลขเด็ดจากเจ๊นุ๊กกั",
+  "description": "live score stream เลขเด็ด แม้น live score stream Huay999 หวย999 หวยออนไลน์ มีหวยทุกชนิด live score stream ที่เว็บไซต์หวยไทยของเราจะนำเสนอเป็นแนวทางในวันนี้",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "ตรวจหวย16พฤษภาคม2565",
-    "ตรวจหวย16พฤษภาคม2565 Lotto"
-  ],
+  "keywords": ["LIVE SCORE STREAM","LIVE","SCORE","STREAM","LIVE Huay999","SCORE Huay999","STREAM Huay999"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
