--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "fqeAghBm9sayEyMOTLsruAKa1U7u3B7E5MgH3u7mALDpbZTvrJ",
+  "name": "live score stream ที่ไหน - เว็บใหม่ huay999 2023 ล่าสุด-",
   "theme": "syntax",
   "version": "1.0.52",
   "description": "live score stream เลขเด็ด แม้น live score stream Huay999 หวย999 หวยออนไลน์ มีหวยทุกชนิด live score stream ที่เว็บไซต์หวยไทยของเราจะนำเสนอเป็นแนวทางในวันนี้",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": ["LIVE SCORE STREAM","LIVE","SCORE","STREAM","LIVE Huay999","SCORE Huay999","STREAM Huay999"],
+  "keywords": [
+    "LIVE SCORE STREAM",
+    "LIVE",
+    "SCORE",
+    "STREAM",
+    "LIVE Huay999",
+    "SCORE Huay999",
+    "STREAM Huay999"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
