--- a/package.json
+++ b/package.json
@@ -1,18 +1,10 @@
 {
-  "name": "live score stream ที่ไหน - เว็บใหม่ huay999 2023 ล่าสุด",
+  "name": "WZD2Xc396af2VeyCqpXPEw7yGtm96dMHsQlgHwnhPNywEmgWMq",
   "theme": "syntax",
   "version": "1.0.54",
-  "description": "live score stream เลขเด็ด แม้น live score stream Huay999 หวย999 หวยออนไลน์ มีหวยทุกชนิด live score stream ที่เว็บไซต์หวยไทยของเราจะนำเสนอเป็นแนวทางในวันนี้",
+  "description": "เว็บหวย จ่าย บาทละ 98 เมื่อคุณได้กำไรจากหวยหุ้นก็คงอยากจะถอนกันใช่ไหม แต่ว่า เว็บหวย จ่าย บาทละ 98 Huaysod หวยสด หวยออนไลน์ มีหวยทุกชนิด เว็บหวย จ่าย บาทละ",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "LIVE SCORE STREAM",
-    "LIVE",
-    "SCORE",
-    "STREAM",
-    "LIVE Huay999",
-    "SCORE Huay999",
-    "STREAM Huay999"
-  ],
+  "keywords": ["เว็บหวย จ่าย บาทละ 98","เว็บหวย","จ่าย","บาทละ","98","เว็บหวย Huaysod","จ่าย Huaysod","บาทละ Huaysod","98 Huaysod"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
