--- a/package.json
+++ b/package.json
@@ -1,20 +1,10 @@
 {
-  "name": "เว็บหวย จ่าย บาทละ 98 ที่ไหน - เว็บใหม่ huaysod 2023 ล่าสุด",
+  "name": "oPw8blax3qAQvoRy0YsB4iv3AEyO9cvISZ6BEfvIpaIjdQoN4O",
   "theme": "syntax",
   "version": "1.0.57",
-  "description": "เว็บหวย จ่าย บาทละ 98 เมื่อคุณได้กำไรจากหวยหุ้นก็คงอยากจะถอนกันใช่ไหม แต่ว่า เว็บหวย จ่าย บาทละ 98 Huaysod หวยสด หวยออนไลน์ มีหวยทุกชนิด เว็บหวย จ่าย บาทละ",
+  "description": "สถิติหวยออกวันจันทร์ ช่องดูบอลสด กับ สถิติหวยออกวันจันทร์ Huay Happy หวยแฮปปี้ หวยออนไลน์ มีหวยทุกชนิด แมนซิตี้ ช่องดูบอลสด วัตฟอร์ด แมนซิตี้ ดูบอลสด วัตฟอ",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "เว็บหวย จ่าย บาทละ 98",
-    "เว็บหวย",
-    "จ่าย",
-    "บาทละ",
-    "98",
-    "เว็บหวย Huaysod",
-    "จ่าย Huaysod",
-    "บาทละ Huaysod",
-    "98 Huaysod"
-  ],
+  "keywords": ["สถิติหวยออกวันจันทร์","สถิติหวยออกวันจันทร์ Huay Happy"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
