--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "สถิติหวยออกวันจันทร์ มีคำตอบ - เว็บใหม่ huay happy 2023 ล่าสุด-",
+  "name": "ssZ3N9BE7ZGdBnVwq6Jgk6sW0tkNcIovTf6qBsW9ZZCJFgEBex",
   "theme": "syntax",
   "version": "1.0.60",
-  "description": "สถิติหวยออกวันจันทร์ ช่องดูบอลสด กับ สถิติหวยออกวันจันทร์ Huay Happy หวยแฮปปี้ หวยออนไลน์ มีหวยทุกชนิด แมนซิตี้ ช่องดูบอลสด วัตฟอร์ด แมนซิตี้ ดูบอลสด วัตฟอ",
+  "description": "แอพหวย หวยลาว ว่า แอพหวย Choke โชค หวยออนไลน์ มีหวยทุกชนิด ຫວຍລາວ หรือ หวยพัฒนา ( ຫວຍພັດທະນາ ) ที่กำลังเป็นที่นิยมอยู่ในขณะนี้ และสำหรับท่านที่กำลังมองหา แ",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "สถิติหวยออกวันจันทร์",
-    "สถิติหวยออกวันจันทร์ Huay Happy"
-  ],
+  "keywords": ["แอพหวย","แอพหวย Choke"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
