--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "F1wJE6YUugKM5kKHMgaX4BcBXva6h8rjHsGQcAdvA7MfTwsBRF",
+  "name": "แอพหวย เล่นยังไง - เว็บใหม่ choke 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.60",
   "description": "แอพหวย หวยลาว ว่า แอพหวย Choke โชค หวยออนไลน์ มีหวยทุกชนิด ຫວຍລາວ หรือ หวยพัฒนา ( ຫວຍພັດທະນາ ) ที่กำลังเป็นที่นิยมอยู่ในขณะนี้ และสำหรับท่านที่กำลังมองหา แ",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": ["แอพหวย","แอพหวย Choke"],
+  "keywords": [
+    "แอพหวย",
+    "แอพหวย Choke"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
