--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "แอพหวย เล่นยังไง - เว็บใหม่ choke 2023 ล่าสุด",
+  "name": "yrHk62LjQ6bUK8AcvCaBMlJQaH6dqJXaqTHPhNS3IPaaG6SndG",
   "theme": "syntax",
   "version": "1.0.61",
-  "description": "แอพหวย หวยลาว ว่า แอพหวย Choke โชค หวยออนไลน์ มีหวยทุกชนิด ຫວຍລາວ หรือ หวยพัฒนา ( ຫວຍພັດທະນາ ) ที่กำลังเป็นที่นิยมอยู่ในขณะนี้ และสำหรับท่านที่กำลังมองหา แ",
+  "description": "รูเล็ต กติกา ตอบ จาก รูเล็ต กติกา Gclub-royal เว็บพนันออนไลน์ อันดับหนึ่ง เป็นแนว เกมตู้ที่ต้องดึงคันโยกเพื่อให้ตัวสล็อตหมุน เพื่อให้ได้รางวัลแจ็คพอต",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "แอพหวย",
-    "แอพหวย Choke"
-  ],
+  "keywords": [null],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
