--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "รูเล็ต กติกา สมัครยังไง - เว็บใหม่ gclub-royal 2023 ล่าสุด",
+  "name": "7dFbuY9ibAsfpd9CQSpilBaZUJ7wogcGkMIAjxIgcUchJMVUxA",
   "theme": "syntax",
   "version": "1.0.65",
-  "description": "รูเล็ต กติกา ตอบ จาก รูเล็ต กติกา Gclub-royal เว็บพนันออนไลน์ อันดับหนึ่ง เป็นแนว เกมตู้ที่ต้องดึงคันโยกเพื่อให้ตัวสล็อตหมุน เพื่อให้ได้รางวัลแจ็คพอต",
+  "description": "เว็บตรงไม่ผ่านเอเย่นต์ คือ การเดินลงสนามแน่นอนแม้ว่าจะเตรียมตัวมาดีขนาดไหน กับ เว็บตรงไม่ผ่านเอเย่นต์ คือ Sbobet เว็บพนันออนไลน์ อันดับหนึ่ง อยู่ที่คุณปรับ",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    null
-  ],
+  "keywords": ["เว็บตรงไม่ผ่านเอเย่นต์ คือ","เว็บตรงไม่ผ่านเอเย่นต์","คือ","เว็บตรงไม่ผ่านเอเย่นต์ Sbobet","คือ Sbobet"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
