Renaming C4HXwZxWmv6L2JxSo4TOBhBzIltjhKYlQzAbgxtIimXAb7Eujk to เว็บตรงไม่ผ่านเอเย่นต์ คือ ดูที่ไหน - เว็บใหม่ sbobet 2023 ล่าสุด-

--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "C4HXwZxWmv6L2JxSo4TOBhBzIltjhKYlQzAbgxtIimXAb7Eujk",
+  "name": "เว็บตรงไม่ผ่านเอเย่นต์ คือ ดูที่ไหน - เว็บใหม่ sbobet 2023 ล่าสุด-",
   "theme": "syntax",
   "version": "1.0.66",
   "description": "เว็บตรงไม่ผ่านเอเย่นต์ คือ การเดินลงสนามแน่นอนแม้ว่าจะเตรียมตัวมาดีขนาดไหน กับ เว็บตรงไม่ผ่านเอเย่นต์ คือ Sbobet เว็บพนันออนไลน์ อันดับหนึ่ง อยู่ที่คุณปรับ",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": ["เว็บตรงไม่ผ่านเอเย่นต์ คือ","เว็บตรงไม่ผ่านเอเย่นต์","คือ","เว็บตรงไม่ผ่านเอเย่นต์ Sbobet","คือ Sbobet"],
+  "keywords": [
+    "เว็บตรงไม่ผ่านเอเย่นต์ คือ",
+    "เว็บตรงไม่ผ่านเอเย่นต์",
+    "คือ",
+    "เว็บตรงไม่ผ่านเอเย่นต์ Sbobet",
+    "คือ Sbobet"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
