--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "เว็บตรงไม่ผ่านเอเย่นต์ คือ ดูที่ไหน - เว็บใหม่ sbobet 2023 ล่าสุด-",
+  "name": "ADna87OMnADKLzbDB2bvfmMiOmqrVmASqhmmYBYqs1yOiOusom",
   "theme": "syntax",
   "version": "1.0.67",
-  "description": "เว็บตรงไม่ผ่านเอเย่นต์ คือ การเดินลงสนามแน่นอนแม้ว่าจะเตรียมตัวมาดีขนาดไหน กับ เว็บตรงไม่ผ่านเอเย่นต์ คือ Sbobet เว็บพนันออนไลน์ อันดับหนึ่ง อยู่ที่คุณปรับ",
+  "description": "918kiss APK senang menang สวัสดีผู้ติดตาม แม้น 918kiss APK senang menang ที่ 3Star เว็บพนัน อันดับหนึ่ง Stakehow ทุกท่าน สำหรับบทความนี้ผมจะมาแนะนำเว็บ แทง",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "เว็บตรงไม่ผ่านเอเย่นต์ คือ",
-    "เว็บตรงไม่ผ่านเอเย่นต์",
-    "คือ",
-    "เว็บตรงไม่ผ่านเอเย่นต์ Sbobet",
-    "คือ Sbobet"
-  ],
+  "keywords": ["918KISS APK SENANG MENANG","918KISS","APK","SENANG","MENANG","918KISS 3Star","APK 3Star","SENANG 3Star","MENANG 3Star"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
