--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "ADna87OMnADKLzbDB2bvfmMiOmqrVmASqhmmYBYqs1yOiOusom",
+  "name": "aLDfwERdyGIKKit0y9PyX3vnvAjUfe4jRV3O7H8I9cbJvqeqXc",
   "theme": "syntax",
   "version": "1.0.67",
-  "description": "918kiss APK senang menang สวัสดีผู้ติดตาม แม้น 918kiss APK senang menang ที่ 3Star เว็บพนัน อันดับหนึ่ง Stakehow ทุกท่าน สำหรับบทความนี้ผมจะมาแนะนำเว็บ แทง",
+  "description": "หวยลาวสตาร์ย้อนหลัง ผลหวยหุ้นไทย เนื่องด้วย หวยลาวสตาร์ย้อนหลัง ที่ Huaylike เว็บหวยออนไลน์ อันดับหนึ่ง 220365 ตรวจหวยหุ้นไทย (เย็น) ประจำงวดวันที่ 22 มีนา",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": ["918KISS APK SENANG MENANG","918KISS","APK","SENANG","MENANG","918KISS 3Star","APK 3Star","SENANG 3Star","MENANG 3Star"],
+  "keywords": ["หวยลาวสตาร์ย้อนหลัง","หวยลาวสตาร์ย้อนหลัง Huaylike"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
