--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "หวยลาวสตาร์ย้อนหลัง เลือกยังไง - เว็บใหม่ huaylike 2023 ล่าสุด",
+  "name": "aLDfwERdyGIKKit0y9PyX3vnvAjUfe4jRV3O7H8I9cbJvqeqXc",
   "theme": "syntax",
   "version": "1.0.68",
-  "description": "หวยลาวสตาร์ย้อนหลัง ผลหวยหุ้นไทย เนื่องด้วย หวยลาวสตาร์ย้อนหลัง ที่ Huaylike เว็บหวยออนไลน์ อันดับหนึ่ง 220365 ตรวจหวยหุ้นไทย (เย็น) ประจำงวดวันที่ 22 มีนา",
+  "description": "สถิติหวยลาว ส ตา ร์ วันศุกร์ ผลหวยลาว ใน สถิติหวยลาว ส ตา ร์ วันศุกร์ ที่ Mawinbet เว็บหวยออนไลน์ อันดับหนึ่ง 12965 ผลหวยพัฒนา 12965 ผลหวยลาววันนี้ ย้อนหลั",
   "repository": "https://github.com/gullibles-02/indoor-09",
-  "keywords": [
-    "หวยลาวสตาร์ย้อนหลัง",
-    "หวยลาวสตาร์ย้อนหลัง Huaylike"
-  ],
+  "keywords": ["สถิติหวยลาว ส ตา ร์ วันศุกร์","สถิติหวยลาว","ส","ตา","ร์","วันศุกร์","สถิติหวยลาว Mawinbet","ส Mawinbet","ตา Mawinbet","ร์ Mawinbet","วันศุกร์ Mawinbet"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
